--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </style>
   </head>
   <body id="body">
+    <noscript>enable javascript you actual autist</noscript>
     <div id="box">
       <input type="text" placeholder="id" id="inputbox" onchange="replace()">
     </div>
