Revert "pwa pt.1"
This reverts commit 96b53086579f86e0e354c8e78d1fd7bae273fbdb.

lmoa fuck this

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
   <body id="body">
     <noscript>enable javascript you actual autist</noscript>
     <div id="box">
-      <input type="text" placeholder="id" id="inputbox" label="id" onchange="replace()">
+      <input type="text" placeholder="id" id="inputbox" onchange="replace()">
     </div>
-          <input type="button" id="btnleft" label="bakåt" onclick="back()">
-      <input type="button" id="btnright" label="frammåt" onclick="forward()">
+          <input type="button" id="btnleft" onclick="back()">
+      <input type="button" id="btnright" onclick="forward()">
     <script>
     var classid = "te2b"
     Date.prototype.getWeek = function() {
