--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         filter: invert(0%);
         overflow: hidden;
         background-color: #C0C0C0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
       }
       #box {
         position: absolute;
